--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -53,6 +53,7 @@ server {
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
 		fastcgi_index index.php;
+		fastcgi_read_timeout 600;
 		include fastcgi_params;
 	}
 
